# fckweb-template

./: .gitignore  self-signed.rs
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: .gitignore  lib.rs
server/: Cargo.toml
server/src/: http.rs  main.rs
